# zeus-music-maker

./: .gitignore  Cargo.toml  LICENSE  README.md  app.manifest  build.bat  build.rs  build_optimized.bat  build_portable.bat  build_production.bat  build_release.bat  build_release.sh  index.html  文件名ASCII转换说明.md  模组制作完整指南.md  系统要求.md
.cargo/: config.toml
release/: README.txt
release/templates/: config.txt  mod.txt
src/: app.rs  audio.rs  audio_converter.rs  audio_decrypt.rs  embedded.rs  ffmpeg_downloader.rs  ffmpeg_plugin.rs  file_ops.rs  main.rs  models.rs  paa_converter.rs  parallel_converter.rs  resource_manager.rs  stringtable.rs  templates.rs  threading.rs  translation.rs  ui.rs  video_chunk_converter.rs  video_chunk_parallel_processor.rs  video_converter.rs
src/app/: lifecycle.rs
src/utils/: constants.rs  file_utils.rs  mod.rs  string_utils.rs
templates/: FileListWithMusicTracks.txt  config.txt  video_config.txt  video_mod.txt
