[package]
name = "zeus-music-maker"
version = "1.0.0"
edition = "2021"
authors = ["ViVi141 <747384120@qq.com>"]
description = "宙斯音乐制作器 - 用于自动生成Arma 3音乐模组文件结构的增强版工具"
license = "CC-BY-SA-4.0"

[dependencies]
# GUI Framework
eframe = "0.26.2"
egui = "0.26.2"
egui_plot = "0.26.2"

# Chinese font support
include_dir = "0.7"

# 嵌入资源文件
rust-embed = "8.3"

# File operations
walkdir = "2.4"
dirs = "5.0"
rfd = "0.12"

# Audio processing
symphonia = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
symphonia-codec-vorbis = "0.5.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Template engine
handlebars = "5.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Image processing
image = "0.24"

# PAA conversion (WebAssembly)
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# File I/O utilities
fs_extra = "1.3"

# Audio decryption
xz2 = "0.1.7"
infer = "0.19.0"

# AES encryption for NetEase NCM
aes = "0.8"
base64 = "0.21"
hex = "0.4"

# Threading and async support
tokio = { version = "1.0", features = ["full"] }
crossbeam-channel = "0.5"

# Windows DLL support
[target.'cfg(windows)'.dependencies]
libc = "0.2"
libloading = "0.8"
winapi = { version = "0.3", features = ["wincon", "winuser"] }

# Windows资源处理
[build-dependencies]
winres = "0.1"

# 构建优化配置
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Windows链接器参数 - 设置为Windows应用程序而不是控制台应用程序
[target.x86_64-pc-windows-msvc]
rustflags = [
    "-C", "link-arg=/SUBSYSTEM:WINDOWS",
    "-C", "link-arg=/ENTRY:mainCRTStartup",
    "-C", "link-arg=/MACHINE:X64"
]

# Windows特定配置
[[bin]]
name = "zeus-music-maker"
path = "src/main.rs"


[dev-dependencies]