[package]
name = "zeus-music-maker"
version = "2.0.0"
edition = "2021"
authors = ["ViVi141 <747384120@qq.com>"]
description = "宙斯音乐制作器 - 用于自动生成Arma 3音乐模组文件结构的增强版工具"
license = "CC-BY-SA-4.0"

[dependencies]
# GUI Framework
eframe = "0.26.2"
egui = "0.26.2"
egui_plot = "0.26.2"

# Chinese font support
include_dir = "0.7"

# 嵌入资源文件
rust-embed = "8.3"

# File operations
walkdir = "2.4"
dirs = "5.0"
rfd = "0.12"

# Audio processing
symphonia = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
symphonia-codec-vorbis = "0.5.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Template engine
handlebars = "5.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Image processing
image = "0.24"

# PAA conversion (WebAssembly)
wasmtime = "15.0"
wasmtime-wasi = "15.0"

# File I/O utilities
fs_extra = "1.3"

# Audio decryption
xz2 = "0.1.7"
infer = "0.19.0"

# AES encryption for NetEase NCM
aes = "0.8"
base64 = "0.21"
hex = "0.4"

# Threading and async support
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "net", "fs", "io-util", "time"] }
crossbeam-channel = "0.5"

# HTTP client for downloading FFmpeg
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli"] }
indicatif = "0.17"
zip = "0.6"

# FFmpeg plugin dependencies
which = "4.4"
futures-util = "0.3"

# Chinese pinyin conversion
pinyin = "0.10"

# CPU information for optimal thread count
num_cpus = "1.0"

# Windows DLL support
[target.'cfg(windows)'.dependencies]
libc = "0.2"
libloading = "0.8"
winapi = { version = "0.3", features = ["wincon", "winuser", "processthreadsapi", "handleapi", "psapi"] }

# Windows资源处理
[build-dependencies]
winres = "0.1"

# 生产环境专用配置 - 极致优化
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false
incremental = false

# 开发环境优化配置
[profile.dev]
opt-level = 1
debug = 1
incremental = true


# Windows特定配置
[[bin]]
name = "zeus-music-maker"
path = "src/main.rs"


[dev-dependencies]