[package]
name = "zeus-music-maker"
version = "2.1.0"
edition = "2021"
authors = ["ViVi141 <747384120@qq.com>"]
description = "宙斯音乐制作器 - 用于自动生成Arma 3音乐模组文件结构的增强版工具"
license = "AGPL-3.0"

[dependencies]
# GUI Framework
eframe = "0.27.2"
egui = "0.27.2"

# 嵌入资源文件
rust-embed = "8.4"

# File operations
dirs = "5.0"
rfd = "0.13"

# Audio processing
symphonia = "0.5.4"
symphonia-bundle-mp3 = "0.5.4"
symphonia-codec-vorbis = "0.5.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template engine
handlebars = "5.1"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Image processing
image = "0.25"

# PAA conversion (纯Rust实现)


# Audio decryption
xz2 = "0.1.7"
infer = "0.19.0"

# NetEase NCM decryption (使用DLL)

# Threading and async support
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "net", "fs", "io-util", "time"] }
crossbeam-channel = "0.5"

# HTTP client for downloading FFmpeg
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli"] }
indicatif = "0.17"
zip = "0.6"

# FFmpeg plugin dependencies
which = "5.0"

# Chinese pinyin conversion
pinyin = "0.10"

# CPU information for optimal thread count
num_cpus = "1.0"

# Parallel processing for video chunk conversion
rayon = "1.10"

# Windows DLL support
[target.'cfg(windows)'.dependencies]
libc = "0.2"
libloading = "0.8"
winapi = { version = "0.3", features = ["wincon", "winuser", "processthreadsapi", "handleapi", "psapi", "winbase"] }

# Windows资源处理
[build-dependencies]
winres = "0.1"

# 生产环境专用配置 - 极致优化（便携版）
[profile.release]
opt-level = "z"  # 优化文件大小（便携版）
lto = "fat"      # 链接时优化
codegen-units = 1 # 单代码生成单元
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false
incremental = false


# 开发环境优化配置
[profile.dev]
opt-level = 1
debug = 1
incremental = true

# 性能测试配置
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 16
debug = false


# Windows特定配置
[[bin]]
name = "zeus-music-maker"
path = "src/main.rs"


[dev-dependencies]